Fix typo, thanks Kristian.

--- a/tex/17.tex
+++ b/tex/17.tex
@@ -1578,7 +1578,7 @@ for deps in sorted(partitions.keys()):
 \end{python}
 The output text from the program is included below.  Notice that the
 literal constant 2 has no dependencies. Expressions in this partition can
-always be precomputed compile-time. The \emp{Constant} \emp{c\_0} depends
+always be precomputed at compile-time. The \emp{Constant} \emp{c\_0} depends
 on data which varies for each cell, represented by \emp{c} in the dependency
 set, but not on spatial coordinates, so it can be placed outside the
 quadrature loop. The \emp{Function} \emp{w\_1} and expressions depending
