Proofreading. Small tweaks on Dolfwave code.

--- a/tex/25.tex
+++ b/tex/25.tex
@@ -237,7 +237,7 @@ tree: \emp{dolfwave/src/1hd1sforms}, \emp{dolfwave/src/1hdforms} and\\
 \emp{dolfwave/src/2hdforms}).  These files are compiled using \ffc to
 generate the C++ code of the finite element discretization of the
 variational forms (see Chapter~\ref{chap:alnes-1}).  DOLFWAVE is based
-on the C++ interface of DOLFIN $0.9.9$ to assemble and solve all the
+on the C++ interface of DOLFIN $1.0$ to assemble and solve all the
 systems of equations related with the finite element method.
 
 All the DOLFWAVE code is available for download at
@@ -1476,13 +1476,11 @@ From the bilinear and linear forms of the variational formulation, all
 the finite element matrices and vectors are created.
 %%
 \begin{c++}
-dw.FunctionSpaceInit(mesh); // Initialization of the function spaces
+dw.SpacesFunctionsVectorsInit(mesh); // Initialization of the spaces, functions and vectors
 dw.BilinearFormInit(mesh,depth); // Initialization of the bilinear form "a"
 dw.MatricesAssemble( ); // Initialization of the system matrices
-dw.FunctionsInit( ); // Initialization of the surface elevation and velocity potential
 dw.LinearFormsInit(depth, zero, zero, zero, zero, zero); // Initialization of the linear form "L"
 dw.InitialCondition(eta_init,phi_init); // Setting the initial conditions
-dw.VectorInit( ); // Initialization of the auxiliary vectors for the time integration schemes
 \end{c++}
 %%
 We only need to make an initial factorization for the LU solver, since
