Pretty much replaced top and bottom with left and right for figures. Figures look small though..

--- a/tex/22.tex
+++ b/tex/22.tex
@@ -716,10 +716,9 @@ steps here in detail.
   $n_v\times n_v$ matrices for a term in a component equation and
   insert it into the relevant places in the total coefficient matrix.
   For example, to assemble a convection matrix for one component,
-  define a \emp{FunctionSpace} for a scalar velocity component from
-  the vector space \emp{V} by grabbing a component space \emp{Vc}:
+  define a \emp{FunctionSpace} \emp{Vc} for one scalar velocity component 
+  identical to the vector space \emp{V.sub(0)}:
 \begin{python}
-Vc = V.sub(0)  # grab space for the 1st velocity component
 uc = TrialFunction(Vc)
 vc = TestFunction(Vc)
 Ac = assemble(conv(u_1, uc, vc)*dx)
@@ -916,7 +915,7 @@ treated implicitly.
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/Burgers_KE_IM2.pdf}
   \caption{ Accumulation of error in kinetic energy for the inviscid
     Burgers' equation initialized as $u(x,0)=-\text{sin}(\pi x)+0.1
-    \xi(x)$. Top and bottom figures represent the results of using
+    \xi(x)$. Left and right figures represent the results of using
     \eqref{eq:mortensen:IM1} and \eqref{eq:mortensen:IM2} for
     convection respectively. }
   \label{fig:mortensen:burgers_KE}
@@ -1060,7 +1059,7 @@ p_ = Constant(0.)
 For the coupled solver, \emp{VQ} is used in place of \emp{V}
 and the pressure needs to be set in \emp{U0}. The Orr--Sommerfeld
 perturbation leads to a non-trivial solution that evolves in
-time. The initial perturbed velocity field is illustrated in the top
+time. The initial perturbed velocity field is illustrated on the left
 of Figure~\ref{fig:mortensen:OS_init}.
 
 \begin{figure}
@@ -1068,8 +1067,8 @@ of Figure~\ref{fig:mortensen:OS_init}.
   \centering
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/OS_init.pdf}
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/OrrS_eigvals.pdf}
-  \caption{The top figure shows a snapshot of the initial perturbed velocity
-    field. The bottom shows the eigenvalues for the Orr Sommerfeld equation
+  \caption{The left figure shows a snapshot of the initial perturbed velocity
+    field. The figure on the right shows the eigenvalues for the Orr Sommerfeld equation
     at $Re=8000$. Note the open square, which is the only eigenvalue
     with a positive imaginary part. This represents an unstable mode.}
   \label{fig:mortensen:OS_init}
@@ -1097,9 +1096,9 @@ error in the perturbation flow energy computed as
     forms, here represented with solid, dashed and dotted lines
     respectively. The fully coupled and fractional step solvers are
     represented with gray and black lines, respectively. All results
-    for a mesh size of $N=48$. The figures on top and bottom
+    for a mesh size of $N=48$. The figures on left and right
     use explicit \eqref{eq:mortensen:EX} and implicit \eqref{eq:mortensen:IM2}
-    convection respectively. Note that for the top figure the black and gray curves
+    convection respectively. Note that for the left figure the black and gray curves
     are practically identical (the error in the fully coupled solver is
     approximately 2\% less throughout). }
   \label{fig:mortensen:OS_init_cfl}
@@ -1114,9 +1113,9 @@ error in the perturbation flow energy computed as
    of convection are here represented with solid, dashed and dotted
    lines respectively. The fully coupled and fractional step solvers
    are represented with gray and black lines, respectively. For all
-   results the time step used is 0.005. The figures on top and bottom
+   results the time step used is 0.005. The figures on left and right
    use explicit \eqref{eq:mortensen:EX} and implicit \eqref{eq:mortensen:IM2}
-   convection respectively. Note that for the top figure the black and
+   convection respectively. Note that for the figure on the left the black and
    gray curves are practically identical (the error in the fully
    coupled solver is approximately 2\% less throughout). }
 \label{fig:mortensen:OS_init_dx}
@@ -1215,9 +1214,9 @@ instability have been reported by \citet{MalikZangHussaini1984} and
     correspond to the standard, divergence and skew forms of the
     convection respectively. The symbolic dots represent the solution
     from a low-order finite volume solver and the squares represent the
-    true solution. Figures 1 and 3 from the top use explicit convection
+    true solution. The left and right figures on the top row use explicit convection
     as in~\eqref{eq:mortensen:EX}, with CFL of 0.1 and 0.05 respectively.
-    Figures 2 and 4 from the top use implicit convection \eqref{eq:mortensen:IM2} and CFL =
+    The left and right figures on the lower row use implicit convection \eqref{eq:mortensen:IM2} and CFL =
     0.1 and 0.05 respectively. Note that for explicit convection and the standard
     implicit form the gray and black curves are practically
     identical. }
@@ -1283,7 +1282,7 @@ and thus only the latter is shown.
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/TG_disserror_model_0_cfl_0_05_Re_100_dofs.pdf}
   \includegraphics[width=\twofigs]{chapters/mortensen/pdf/TG_energyerror_model_0_cfl_0_05_Re_100_dofs.pdf}
   \caption{Relative errors in dissipation rate \eqref{eq:mortensen:diss} is
-    shown in the top figure and the energy \eqref{eq:mortensen:q} in the bottom. The
+    shown in the left figure and the energy \eqref{eq:mortensen:q} in the right. The
     results are displayed for implicit convection
     \eqref{eq:mortensen:IM2}, and the squares, diamonds and pluses
     are used to represent standard, divergence and skew forms
