Small reference fix. Removed one reference that appeared twice. Fix citation to the removed item in 2.tex.

--- a/tex/2.tex
+++ b/tex/2.tex
@@ -1111,7 +1111,7 @@ finite element solution~$u_h$ satisfies
 with minimal computational work. We assume here that both the output
 functional and the variational problem are linear, but the analysis
 may be easily extended to the\vadjust{\pagebreak} full nonlinear
-case~[\citeauthor{ErikssonEstepHansboEtAl1995}\citeyear{ErikssonEstepHansboEtAl1995},\,\citeauthor{BeckerRannacher2001}
+case~[\citeauthor{ErikssonEstepEtAl1995}\citeyear{ErikssonEstepEtAl1995},\,\citeauthor{BeckerRannacher2001}
 \citeyear{BeckerRannacher2001}].
 
 To estimate the error in the output functional~$\mathcal{M}$, we
@@ -1295,4 +1295,4 @@ of~\citet{BabuvskaRheinboldt1978}. Important references include the
 works by~\citet{BankWeiser1985,ZienkiewiczZhu1987,
   ErikssonJohnson1991,ErikssonJohnson1995a,ErikssonJohnsonIII,ErikssonJohnson1995b,ErikssonJohnson1995c,ErikssonJohnsonLarsson1998,AinsworthOden1993}
 and the reviews
-papers~\citep{ErikssonEstepHansboEtAl1995,Verfurth1994,Verfurth1999,AinsworthOden2000,BeckerRannacher2001}.
+papers~\citep{ErikssonEstepEtAl1995,Verfurth1994,Verfurth1999,AinsworthOden2000,BeckerRannacher2001}.
