--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -1741,17 +1741,11 @@ K.~Eriksson and C.~Johnson.
 \newblock \emph{SIAM J. Numer. Anal.}, 32:\penalty0 1750--1763,
   1995{\natexlab{c}}.
 
-\bibitem[Eriksson et~al.(1995{\natexlab{a}})Eriksson, Estep, Hansbo, and
+\bibitem[Eriksson et~al.(1995)Eriksson, Estep, Hansbo, and
   Johnson]{ErikssonEstepEtAl1995}
 K.~Eriksson, D.~Estep, P.~Hansbo, and C.~Johnson.
 \newblock Introduction to adaptive methods for differential equations.
-\newblock \emph{Acta Numerica}, 4:\penalty0 105--158, 1995{\natexlab{a}}.
-
-\bibitem[Eriksson et~al.(1995{\natexlab{b}})Eriksson, Estep, Hansbo, and
-  Johnson]{ErikssonEstepHansboEtAl1995}
-K.~Eriksson, D.~Estep, P.~Hansbo, and C.~Johnson.
-\newblock Introduction to adaptive methods for differential equations.
-\newblock \emph{Acta Numerica}, 4:\penalty0 105--158, 1995{\natexlab{b}}.
+\newblock \emph{Acta Numerica}, 4:\penalty0 105--158, 1995.
 
 \bibitem[Eriksson et~al.(1996)Eriksson, Estep, Hansbo, and
   Johnson]{ErikssonEstepHansboEtAl1996}
@@ -3001,14 +2995,14 @@ M.~Mortensen, H.~P. Langtangen, and J.~Myre.
 \newblock CBC.RANS -- a new flexible, programmable software framework for
   computational fluid dynamics.
 \newblock In H.~I. Andersson and B.~Skallerud, editors, \emph{Sixth National
-  Conference on Computational Mechanics (MekIT'11)}. Tapir, 2011{\natexlab{a}}.
+  Conference on Computational Mechanics (MekIT'11)}. Tapir, 2011.
 
 \bibitem[Mortensen et~al.(2011{\natexlab{b}})Mortensen, Langtangen, and
   Wells]{Mortensen2011}
 M.~Mortensen, H.~P. Langtangen, and G.~N. Wells.
 \newblock A {FEniCS}-based programming framework for modeling turbulent flow by
   the {Reynolds}-averaged {Navier-Stokes} equations.
-\newblock \emph{Advances in Water Resources}, 2011{\natexlab{b}}.
+\newblock \emph{Advances in Water Resources}, 34\penalty0 (9):\penalty0  1082--1101, 2011.
 \newblock URL \url{http://dx.doi.org/10.1016/j.advwatres.2011.02.013}.
 
 \bibitem[MTL4()]{www:mtl4}
