Apply author changes to Chapter 11 [logg-1]

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -3322,7 +3322,13 @@ M.~E. Rognes, R.~C. Kirby, and A.~Logg.
 \newblock \emph{SIAM Journal on Scientific Computing}, 31\penalty0
   (6):\penalty0 4130--4151, 2009.
 
-\bibitem[Roldan et~al.(2009)Roldan, , Wieben, Osswald, and
+\bibitem[Rognes and Logg(2011)Rognes and Logg]{RognesLogg2011}
+M.~E. Rognes and A.~Logg.
+\newblock Automated Goal-Oriented Error Control {I}: Stationary Variational Problems
+\newblock 2011.
+\newblock Submitted.
+
+\bibitem[Roldan et~al.(2009)Roldan, Wieben, Osswald, and
   Chesler]{RoldanHaughtonWiebenEtAl2009}
 A.~Roldan, , V.~Wieben, O.~Haughton, T.~Osswald, and N.~Chesler, N.
 \newblock Characterization of complex {CSF} hydrodynamics at the
