updated Linge ref.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -4847,7 +4847,9 @@ author = {Hans Petter Langtangen and Geir Pedersen}
 	flow analysis},
   journal = {American Journal of Neuroradiology},
   year = {2011},
-  note = {To appear}
+  volume = {32},
+  number = {8}, 
+  pages = {1474--1481}
 }
 
 @ARTICLE{LingeHaughtonLovgren2010,
