--- a/tex/22.tex
+++ b/tex/22.tex
@@ -42,7 +42,7 @@ dynamics thus relies heavily on numerical solutions.
 
 For incompressible Newtonian fluids, the NS equations read
 \begin{align}
- \frac{\partial \vec{u}}{\partial t}+\nabla \vec{u} \,  \vec{u}
+ \frac{\partial \vec{u}}{\partial t} + (\vec{u} \cdot \nabla)\, \vec{u}
       &= \nu \nabla^2 \vec{u} -\frac{1}{\rho} \nabla p +\vec{f}, \label{eq:mortensen:NS}
 \\
  \nabla \cdot \vec{u} &=0.
@@ -179,7 +179,7 @@ $B(\vec{u},\vec{a})$. Here, $\vec{u}$ is the \emph{convecting velocity},
 while $\vec{a}$ is the \emph{convected vector field}. Then the standard
 convective term,
 \begin{equation}
-B(\vec{u},\vec{a}) =  \nabla \vec{a} \, \vec{u},
+B(\vec{u},\vec{a}) =  (\vec{u} \cdot \nabla)\, \vec{a}
 \end{equation}
 can be multiplied by the vector $\vec{b}$ and integrated by parts to yield
 \begin{equation}
@@ -211,7 +211,7 @@ represents transport of kinetic energy:
 \begin{equation}
 \label{eq:mortensen:conv:K}
 \left(B(\vec{u}, \vec{u}), \vec{u} \right)
-= \int_\Omega (\nabla\vec{u} \, \vec{u})\cdot\vec{u}\dx
+= \int_\Omega ((\vec{u} \cdot \nabla)\, \vec{u})\cdot\vec{u}\dx
 = \int_\Omega \vec{u}\cdot\nabla K(\vec{u})\dx
 = B(\vec{u}, \vec{u}\cdot\vec{u}),
 \end{equation}
@@ -233,7 +233,7 @@ follows from the standard format by utilizing the divergence
 constraint. The well-known skew-symmetric (or just skew) form is
 a combination of the standard and divergence forms
 \begin{equation}
- B(\vec{u},\vec{a}) = \frac{1}{2}\left[ \nabla \vec{a} \, \vec{u}\cdot
+ B(\vec{u},\vec{a}) = \frac{1}{2}\left[ (\vec{u} \cdot \nabla)\, \vec{a}
           + \nabla \cdot (\vec{u} \otimes \vec{a}) \right].
 \label{eq:mortensen:skew}
 \end{equation}
@@ -697,7 +697,7 @@ steps here in detail.
 %%
 \begin{enumerate}
  \item Split \emp{F} into accumulation $(\partial \vec{u}/\partial t)$,
-   convection $(\nabla \vec{u} \, \vec{u})$, and diffusion terms
+   convection $((\vec{u} \cdot \nabla)\, \vec{u})$, and diffusion terms
    $(\nu\nabla^2 \vec{u})$, and take advantage of the fact that for the total
    coefficient matrix it is only the nonlinear convection term that
    needs to be reassembled at each time step. The matrices for the
@@ -733,7 +733,7 @@ that makes up the whole convection matrix for the velocity vector
 field.  At the time of writing, it is for a three-dimensional problem
 approximately 20 times faster to assemble this \emp{Ac} than
 assembling the $n_vd\times n_vd$ matrix for the complete convection
-term $\nabla \vec{u} \, \vec{u}_{n-1}$ by \emp{assemble(conv(u\_1, u,
+term $\vec{u}_{n-1} \cdot \nabla \vec{u}$ by \emp{assemble(conv(u\_1, u,
   v)*dx)}.
 
 \item The right-hand side of the linear system can be reassembled
@@ -824,7 +824,7 @@ obstructions.
 
 Burgers' equation reads:
 \begin{align}
- \frac{\partial u}{\partial t}+\nabla u \, u
+ \frac{\partial u}{\partial t}+u \nabla u
   &= \nu \nabla^2 u, \quad x \in (-1,1), \quad 0<t, \quad u(\pm 1,t)=0,
 \\
  u(x,0) &=-\text{sin}(\pi x)+\kappa \xi,
@@ -854,7 +854,7 @@ form the following combination of standard and divergence forms is used
 \begin{equation}
  B(\tilde{u},\Bar{u})
     = \frac{1}{3}\left( \tilde{u}\nabla \Bar{u}
-      + \nabla \tilde{u} \Bar{u} \right).
+      + \nabla (\tilde{u} \Bar{u}) \right).
 \end{equation}
 Initialization of the FEniCS \emp{Function u0} can be performed by
 subclassing class \emp{Expression} as
@@ -1052,7 +1052,7 @@ specified initial velocity field we need to create an instance of the
 procedure for the fractional step solver is:
 \begin{python}
 # Using 80 Chebyshev points and Reynolds number of 8000:
-u = U0(element=V.ufl_element(), defaults={"Re":8000., "N":80})
+u = U0(Re=8000., N=80, element=V.ufl_element())
 u_ = interpolate(u, V)
 p_ = Constant(0.)
 \end{python}
