updated a few references

--- a/tex/BM1.tex
+++ b/tex/BM1.tex
@@ -2360,8 +2360,8 @@ J.~Jiang, K.~Johnson, K.~Valen-Sendstad, K.-A. Mardal, O.~Wieben, and
 \newblock Flow characteristics in a canine aneurysm model: A comparison of
   {4-D} accelerated phase-contrast {MR} measurements and computational fluid
   dynamics simulations.
-\newblock 2010.
-\newblock Submitted.
+\newblock 2011.
+\newblock Accepted in Medical Physics.
 
 \bibitem[Jin(2002)]{Jin2002}
 J.~Jin.
@@ -2684,8 +2684,8 @@ S.~Linge, V.~Haughton, A.~E. L{\o}vgren, K.-A. Mardal, A.~Helgeland, and H.~P.
   Langtangen.
 \newblock Effect of tonsilar herniation on cyclic {CSF} flow studied with
   computational flow analysis.
-\newblock \emph{American Journal of Neuroradiology}, 2011.
-\newblock To appear.
+\newblock \emph{American Journal of Neuroradiology}, 32\penalty0 (8):\penalty0 1474--1481, 2011.
+\newblock URL \url{http://dx.doi.org/10.3174/ajnr.A2496}.
 
 \bibitem[Logg(2004)]{Logg2004}
 A.~Logg.
