ilmarw, kent-and -> fenics

--- a/tex/14.tex
+++ b/tex/14.tex
@@ -384,7 +384,7 @@ from \emp{\$LD\_LIBRARY\_PATH} and so on.  Such error messages look
 like:
 \begin{progoutput}
 In instant.import_module_directly:
-Failed to import module "instant_module_4b41549bc6282877d3f97d54ef664d4" from "/home/kent-and/.instant/cache".
+Failed to import module "instant_module_4b41549bc6282877d3f97d54ef664d4" from "/home/fenics/.instant/cache".
 Traceback (most recent call last):
   File "test2.py", line 21, in <module>
     sum_func = inline_with_numpy(c_code, arrays = [["n1", "array1"]])
@@ -427,17 +427,17 @@ The contents are:
 ~/instant_doc/code$ cd ex4/
 ~/instant_doc/code/ex4$ ls -g
 total 224
-drwxr-xr-x 4 ilmarw  4096 2009-05-18 16:52 build
--rw-r--r-- 1 ilmarw   844 2009-05-18 16:52 compile.log
--rw-r--r-- 1 ilmarw   183 2009-05-18 16:52 ex4-0.0.0.egg-info
--rw-r--r-- 1 ilmarw    40 2009-05-18 16:52 ex4.checksum
--rw-r--r-- 1 ilmarw   402 2009-05-18 16:53 ex4.i
--rw-r--r-- 1 ilmarw  1866 2009-05-18 16:52 ex4.py
--rw-r--r-- 1 ilmarw  2669 2009-05-18 16:52 ex4.pyc
--rwxr-xr-x 1 ilmarw 82066 2009-05-18 16:52 _ex4.so
--rw-r--r-- 1 ilmarw 94700 2009-05-18 16:52 ex4_wrap.cxx
--rw-r--r-- 1 ilmarw    23 2009-05-18 16:53 __init__.py
--rw-r--r-- 1 ilmarw   448 2009-05-18 16:53 setup.py
+drwxr-xr-x 4 fenics  4096 2009-05-18 16:52 build
+-rw-r--r-- 1 fenics   844 2009-05-18 16:52 compile.log
+-rw-r--r-- 1 fenics   183 2009-05-18 16:52 ex4-0.0.0.egg-info
+-rw-r--r-- 1 fenics    40 2009-05-18 16:52 ex4.checksum
+-rw-r--r-- 1 fenics   402 2009-05-18 16:53 ex4.i
+-rw-r--r-- 1 fenics  1866 2009-05-18 16:52 ex4.py
+-rw-r--r-- 1 fenics  2669 2009-05-18 16:52 ex4.pyc
+-rwxr-xr-x 1 fenics 82066 2009-05-18 16:52 _ex4.so
+-rw-r--r-- 1 fenics 94700 2009-05-18 16:52 ex4_wrap.cxx
+-rw-r--r-- 1 fenics    23 2009-05-18 16:53 __init__.py
+-rw-r--r-- 1 fenics   448 2009-05-18 16:53 setup.py
 \end{progoutput}
 The file \emp{ex4.i} is the SWIG interface file.
 Another central file is the Distutils file \emp{setup.py}, which is generated
