nabla -> grad in SyFi/SFC chap.

--- a/tex/15.tex
+++ b/tex/15.tex
@@ -116,8 +116,8 @@ print "integral of f from 0 to 1 is:", intf
 GiNaC provides the basic utilities for \syfi{} in the sense that it provides
 manipulation of polynomials, as well as differentiation and integration
 with respect to one variable. \syfi{} extends GiNaC with polynomial
-spaces and differentiation operators like $\nabla$, $\nabla\cdot$, and
-$\nabla\times$, in addition to integration over a number of polygonal
+spaces and differentiation operators like $\Grad$, $\Div$, and
+$\operatorname{curl}$, in addition to integration over a number of polygonal
 domains.  With these utilities it is easy to define finite elements.
 
 Some elements that have been implemented include: continuous and
@@ -323,12 +323,12 @@ an elasticity problem where the constitutive law is a quite complicated
 variant of \citet{Fung1993}, described by the following equations:
 %
 \begin{align}
-F &= I + (\nabla u), \\
+F &= I + (\Grad u), \\
 C &= F^{\top}: F, \\
 E &= (C-I)/2, \\
 \psi &= \frac{\lambda}{2} \, \mbox{tr}(E)^2 + K\exp((E A,E)), \\
 P &= \frac{\partial \psi}{\partial E}, \\
-\LL &= \int_\Omega P: (\nabla v) \dx, \\
+\LL &= \int_\Omega P: (\Grad v) \dx, \\
 \JJ_F &= \frac{\partial \LL}{\partial u}.
 \end{align}
 Here, $u$ is the unknown displacement, $v$ is a
@@ -372,7 +372,7 @@ To test the computational efficiency of the generated code for this
 problem, we compare the assembly of $\JJ_F$ with the assembly of a
 corresponding linear elasticity problem with the following matrix $\JJ_L$:
 \begin{equation}
-\JJ_L = \int_\Omega \lambda \nabla \cdot u \nabla \cdot v + (\lambda + \mu)\nabla u:\nabla v \dx.
+\JJ_L = \int_\Omega \lambda \Div u \Div v + (\lambda + \mu)\Grad u: \Grad v \dx.
 \end{equation}
 In Table \ref{SFCtest} we see a comparison of the efficiency for the
 above examples.  Clearly, the nonlinear example is no more than 4 times
